crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@66.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$.double().floor().ceiling().abs()'::jsonpath;"
---
SelectStmt@0..54
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..53
    TypeCast@7..53
      AConst@7..43
        Sconst@7..43 "'$.double().floor().c ..."
      Typecast@43..45 "::"
      TypeName@45..53
        Ident@45..53 "jsonpath"
  Ascii59@53..54 ";"

