crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@68.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$.datetime()'::jsonpath;"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    TypeCast@7..31
      AConst@7..21
        Sconst@7..21 "'$.datetime()'"
      Typecast@21..23 "::"
      TypeName@23..31
        Ident@23..31 "jsonpath"
  Ascii59@31..32 ";"

