crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@ starts with \"abc\")'::jsonpath;"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    TypeCast@7..44
      AConst@7..34
        Sconst@7..34 "'$ ? (@ starts with \" ..."
      Typecast@34..36 "::"
      TypeName@36..44
        Ident@36..44 "jsonpath"
  Ascii59@44..45 ";"

