crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@ like_regex \"(invalid pattern\")'::jsonpath;"
---
SelectStmt@0..57
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    TypeCast@7..56
      AConst@7..46
        Sconst@7..46 "'$ ? (@ like_regex \"( ..."
      Typecast@46..48 "::"
      TypeName@48..56
        Ident@48..56 "jsonpath"
  Ascii59@56..57 ";"

